<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/iv_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space20"
            android:text="@string/let_s_get_started"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space20"
            android:text="@string/please_give_us_a_few_details_about_you_and_your_business"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/space20"


            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardCornerRadius="4dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/space20"
                android:layout_marginEnd="@dimen/space10"
                android:layout_marginTop="@dimen/space10"
                android:layout_marginBottom="@dimen/space10">


                <EditText
                    android:id="@+id/et_first_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/space10"
                    android:textSize="@dimen/size13"
                    android:hint="@string/first_name"
                    android:lines="1"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/space10"
                    android:paddingEnd="@dimen/space10"
                    android:importantForAutofill="no"
                    android:inputType="text"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="4dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/space20"
                android:layout_marginTop="@dimen/space10"
                android:layout_marginBottom="@dimen/space10">


                <EditText
                    android:id="@+id/et_last_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/space10"
                    android:textSize="@dimen/size13"
                    android:hint="@string/last_name"
                    android:lines="1"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/space10"
                    android:paddingEnd="@dimen/space10"
                    android:importantForAutofill="no"
                    android:inputType="text"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="4dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/space20"
            android:layout_marginEnd="@dimen/space20"
            android:layout_marginTop="@dimen/space10">


            <EditText
                android:id="@+id/business_name_et"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="@dimen/space10"
                android:textSize="@dimen/size13"
                android:hint="@string/business_name"
                android:lines="1"
                android:background="@null"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:paddingStart="@dimen/space10"
                android:paddingEnd="@dimen/space10"
                android:importantForAutofill="no"
                android:inputType="text"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="4dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/space20"
            android:layout_marginEnd="@dimen/space20"
            android:layout_marginTop="@dimen/space20">


            <EditText
                android:id="@+id/business_username_et"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="@dimen/space10"
                android:textSize="@dimen/size13"
                android:hint="@string/business_user_name"
                android:lines="1"
                android:background="@null"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:paddingStart="@dimen/space10"
                android:paddingEnd="@dimen/space10"
                android:importantForAutofill="no"
                android:inputType="text"/>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/finish_registration_btn"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:text="@string/finish"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="@dimen/space10"
            android:layout_marginTop="@dimen/space40"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space20"
            android:layout_marginEnd="@dimen/space20" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>